# textractor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: kcomplete.md  kcreate_issue.md  ktests.md
data/: concepts.tsv  test.json
data/documents/: note_001.ann.json  note_001.json
data/snomed/: README.md
data/terminology/: README.md
docs/: DOCKER.md
docs/plans/: 2026-02-22-clinical-filtering-design.md  2026-02-22-clinical-filtering-implementation.md  2026-02-22-hierarchy-enforcement-design.md  2026-02-22-hierarchy-enforcement-implementation.md  2026-02-22-preannotate-button-design.md  2026-02-22-preannotate-button-implementation.md  2026-02-22-preannotate-endpoint-design.md  2026-02-22-preannotate-endpoint-implementation.md  2026-02-22-source-field-design.md  2026-02-22-source-field-implementation.md  2026-02-23-bulk-project-export.md  2026-02-23-cli-export-design.md  2026-02-23-cli-export.md  2026-02-23-docker-containerization-design.md  2026-02-23-docker-containerization.md  2026-02-27-health-endpoint.md  (+1 more)
frontend/: index.html  package-lock.json  package.json  vitest.config.ts
tests/: test_annotation_store.py  test_annotations.py  test_cli_export.py  test_deduplication.py  test_documents_router.py  test_export.py  test_export_utils.py  test_health.py  test_icd10cm.py  test_llm.py  test_models.py  test_preannotate.py  test_snomed.py  test_snomed_search.py  test_snomed_sqlite.py  test_storage.py  test_terminology_integration.py  test_terminology_router.py
(+48 files in other folders)
