[project]
name = "textractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "schorndorfer", email = "will.k.t@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "rapidfuzz>=3.14.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
textractor = "textractor:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
